fix: 상위 자바 버전의 toList() 메소드 수정